# flapi-dev-mcp

./: CLAUDE.md  POST_DRAFT.md  POST_REPLY.md  README.md  pyproject.toml
flapi_dev_mcp/: __init__.py  app_scripts.py  arch.py  cli.py  config.py  discovery.py  flapi_conn.py  repo.py  report.py  search.py  server.py
